<resources>
    <string name="app_name">JSONPlaceholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jsonPlaceholder">JSONPlaceHolder</string>
    <string name="home">home</string>
    <string name="album">Album</string>
    <string name="settings">Settings</string>
    <string name="night">Night</string>
    <string name="light">Light</string>
    <string name="system">System</string>
</resources>