<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/backgroundColor"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/jsonPlaceholder"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:background="@color/cardBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@color/cardSelectColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_album"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@color/cardBgColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:gravity="center"
            android:background="@color/cardBgColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_album"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:navGraph="@navigation/main_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>